infrastructure/traefik/external/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: traefik-external-ui-auth
spec:
    basicAuth:
        secret: traefik-auth
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1r3ehz4v5czfczcmfgnyuc7zmz8pjl055shhek88nsjv2xnrnkq8svjnj5c
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtazRsbXRzS1QrZEpuS25G
[...]
            9NfX5zUChgp5pg3vz0v+9xyyQvfWHDUqORIn7AwD8bUNVhnS0WPlIQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-18T02:50:50Z"
    mac: ENC[AES256_GCM,data:xhF0NZVsdMuchfw2idKI+nAJjH9jIWFoZYQ/Vxn4OfHEw+03jaDHqC7m8Bg+MPTFSrMaw2xhobmI/4HgFNTWTiPxbtESOGamu+aybehi42NKEHzNj4rKbtmTchre6lTSOuG1ok7JxCXsxM0q24kIrzd9AdCgoeOIyZx0p8fNimM=,iv:767vyX703/39nar5HE8UtQqOqBCNzO4G4RgOd+LW+L0=,tag:rF1lnGWuSDgjnz7DyKXwBA==,type:str]
    pgp: []
    encrypted_regex: ^(match)$
    version: 3.9.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-external-ui
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:XGSVzkcw3VKsGqowJzzvcmpYZWPaVoiXKGP0,iv:osPsThtzAQXUskPnEBNLC6ItvmuiCsQ9hyl3rt7AqAg=,tag:NyVXCGv0zALV8TCuwUxSDg==,type:str]
          kind: Rule
          services:
            - name: api@internal
              kind: TraefikService
          middlewares:
            - name: traefik-external-ui-auth
    tls:
        secretName: external-prod-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1r3ehz4v5czfczcmfgnyuc7zmz8pjl055shhek88nsjv2xnrnkq8svjnj5c
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtazRsbXRzS1QrZEpuS25G
[...]
            9NfX5zUChgp5pg3vz0v+9xyyQvfWHDUqORIn7AwD8bUNVhnS0WPlIQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-18T02:50:50Z"
    mac: ENC[AES256_GCM,data:xhF0NZVsdMuchfw2idKI+nAJjH9jIWFoZYQ/Vxn4OfHEw+03jaDHqC7m8Bg+MPTFSrMaw2xhobmI/4HgFNTWTiPxbtESOGamu+aybehi42NKEHzNj4rKbtmTchre6lTSOuG1ok7JxCXsxM0q24kIrzd9AdCgoeOIyZx0p8fNimM=,iv:767vyX703/39nar5HE8UtQqOqBCNzO4G4RgOd+LW+L0=,tag:rF1lnGWuSDgjnz7DyKXwBA==,type:str]
    pgp: []
    encrypted_regex: ^(match)$
    version: 3.9.1
